--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -26,7 +26,9 @@
             </Authorized>
         </AuthorizeView>
         <article class="content px-4">
-            @Body
+            <ErrorBoundary>
+                @Body
+            </ErrorBoundary>
         </article>
     </main>
 </div>
